Correccion de Formula de Covarianza

--- a/Machine Learning/Modelos Gaussianos/Matriz de Covarianzas.ipynb
+++ b/Machine Learning/Modelos Gaussianos/Matriz de Covarianzas.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "**Matriz de Covarianza** de un **vector aleatorio** $x \\in \\mathbb{R}^D$\n",
     "\n",
-    "$$\\text{cov}[x] = E\\left[(x - E[x])^T (x - E[x])\\right]$$\n",
+    "$$\\text{cov}[x] = E\\left[(x - E[x]) (x - E[x])^T\\right]$$\n",
     "\n",
     "$$\\text{cov}[x] = \\begin{pmatrix}\n",
     "\\text{var}[X_1] & \\text{cov}[X_1, X_2] & \\cdots & \\text{cov}[X_1, X_d]\\\\\n",
