Cambio de Definicion en Regresion Robusta de Laplace

--- a/Machine Learning/Regresion Lineal/Laplace Robusta.ipynb
+++ b/Machine Learning/Regresion Lineal/Laplace Robusta.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "# **Robusta Laplace**\n",
     "\n",
-    "El método de **Laplace** en **regresión lineal robusta** se obtiene como el **estimador de maxima verosimilitud** (MLE) cuando se asume que las observaciones $y_i$ son independientes y provienen de una **distribución de laplace** con media $w^T x$ y escala constante $b$\n",
+    "El método de **Laplace** en **regresión lineal robusta** se obtiene como el **estimador de maxima verosimilitud** (MLE) cuando se asume que los errores $y_i - w^T x_i$ son independientes y provienen de una **distribución de laplace** con media $0$ y escala constante $b$\n",
     "\n",
     "$$p(y \\mid w, \\theta)$$\n",
     "$$p(y \\mid w, X, b) = \\text{Laplace}(y \\mid Xw, b)$$\n",
